# meme-bot-mcp

./: .dockerignore  .env  .gitignore  =1.12.4  Dockerfile  README-Docker.md  README-Railway.md  README.md  deploy-railway.sh  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  env.example  pyproject.toml  railway.toml  requirements.txt  test_imports.py
data/: templates.json
mcp-bearer-token/: .env  image_utils.py  mcp_quiz_clean.py  mcp_starter.py  mcp_starter_simple.py  package-lock.json  simple_quiz.py
